# models/conocimiento_idioma.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -19,6 +20,7 @@ type ConocimientoIdioma struct {
 	NivelHabla               *ValorNivelIdioma         `orm:"column(nivel_habla);rel(fk)"`
 	Nativo                   bool                      `orm:"column(nativo)"`
 	ClasificacionNivelIdioma *ClasificacionNivelIdioma `orm:"column(clasificacion_nivel_idioma);rel(fk)"`
+	FechaModificacion        string                    `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *ConocimientoIdioma) TableName() string {
@@ -32,6 +34,9 @@ func init() {
 // AddConocimientoIdioma insert a new ConocimientoIdioma into database and returns
 // last inserted Id on success.
 func AddConocimientoIdioma(m *ConocimientoIdioma) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -127,6 +132,9 @@ func GetAllConocimientoIdioma(query map[string]string, fields []string, sortby [
 func UpdateConocimientoIdiomaById(m *ConocimientoIdioma) (err error) {
 	o := orm.NewOrm()
 	v := ConocimientoIdioma{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
