# models/soporte_conocimiento_idioma.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -15,6 +16,7 @@ type SoporteConocimientoIdioma struct {
 	Documento          int                 `orm:"column(documento)"`
 	Descripcion        string              `orm:"column(descripcion);null"`
 	ConocimientoIdioma *ConocimientoIdioma `orm:"column(conocimiento_idioma);rel(fk)"`
+	FechaModificacion  string              `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *SoporteConocimientoIdioma) TableName() string {
@@ -28,6 +30,9 @@ func init() {
 // AddSoporteConocimientoIdioma insert a new SoporteConocimientoIdioma into database and returns
 // last inserted Id on success.
 func AddSoporteConocimientoIdioma(m *SoporteConocimientoIdioma) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -123,6 +128,9 @@ func GetAllSoporteConocimientoIdioma(query map[string]string, fields []string, s
 func UpdateSoporteConocimientoIdiomaById(m *SoporteConocimientoIdioma) (err error) {
 	o := orm.NewOrm()
 	v := SoporteConocimientoIdioma{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
