# swagger/swagger.yml
@@ -597,6 +597,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -611,6 +613,8 @@ definitions:
     properties:
       ClasificacionNivelIdioma:
         $ref: '#/definitions/models.ClasificacionNivelIdioma'
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -639,6 +643,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -658,6 +664,8 @@ definitions:
       Documento:
         type: integer
         format: int64
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -673,6 +681,8 @@ definitions:
       CodigoAbreviacion:
         type: string
       Descripcion:
+        type: string
+      FechaModificacion:
         type: string
       Id:
         type: integer
